# good-fire-ml

./: .copier-answers.yml  .gitignore  Makefile  pyproject.toml
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: mkdocs.yml
docs/docs/: index.md
models/: README.md
notebooks/: explorer-notebook.ipynb
src/experiments/: __init__.py
src/good_fire_ml/: __init__.py  explorer-notebook.ipynb  main.py
src/lib_good_fire_ml/: __init__.py  dataset.py  features.py  plots.py
src/lib_good_fire_ml/modeling/: predict.py  train.py
