[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_good_fire_ml"
version = "0.1.1"
description = "Surrogate modelling based on Landis-II outputs"
authors = [
    { name = "Taylor Boes" },
]
readme = "README.md"
requires-python = "~=3.14.0"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "loguru",
    "tqdm",
    "typer",
    "python-dotenv",
    "matplotlib",
    "numpy",
    "pandas",
    "rasterio",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "ipython",
    "nbdime",
    "pip",
    "mkdocs",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lib_good_fire_ml*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
src = ["src/lib_good_fire_ml"]
include = ["pyproject.toml", "src/lib_good_fire_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["lib_good_fire_ml"]
force-sort-within-sections = true
